# Rust-Portfolio

./: README.md
learning/: README.md  cli-calculator.rs  file-reader.rs  hello-world.rs  todo-cli.rs
learning/advanced/: INDEX.txt  QUICK_START.md  README.md  compression_tool  compression_tool.rs  database_orm  database_orm.rs  design_patterns  design_patterns.rs  graph_algorithms  graph_algorithms.rs  lexer_parser  lexer_parser.rs  memory_pool  memory_pool.rs  multi_threaded_server.rs  web_framework.rs
learning/expert/: async-task-queue.rs  compiler-interpreter.rs  distributed-system.rs  machine-learning.rs  protocol-implementation.rs  real-time-system.rs
libs/: README.md
projects/mattslair/: Cargo.toml
projects/orbspace/: Cargo.toml
projects/orbspace/src/: main.rs
projects/real-world/: INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md
projects/real-world/blog-engine/: .env.example  Cargo.toml  README.md  demo.sh
projects/real-world/blog-engine/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  utils.rs
projects/real-world/blog-engine/static/css/: style.css
projects/real-world/blog-engine/static/js/: main.js
projects/real-world/blog-engine/templates/admin/: dashboard.html
projects/real-world/blog-engine/templates/blog/: index.html  post.html
projects/real-world/blog-engine/templates/layouts/: base.html
projects/real-world/chat-application/: Cargo.toml  README.md
projects/real-world/chat-application/client/: app.js  index.html  style.css
projects/real-world/chat-application/src/: db.rs  main.rs  models.rs  server.rs
projects/real-world/package-manager/: Cargo.toml  README.md  demo.sh
projects/real-world/package-manager/registry-data/: actix-web-4.4.0.toml  axum-0.7.3.toml  clap-4.4.18.toml  diesel-2.1.4.toml  reqwest-0.11.23.toml  rocket-0.5.0.toml  serde-1.0.195.toml  tokio-1.35.1.toml
projects/real-world/package-manager/sample-project/: Package.toml
projects/real-world/package-manager/src/: cli.rs  installer.rs  lockfile.rs  main.rs  models.rs  registry.rs  resolver.rs
projects/rust-ai-saas/ai_saas_suite/: Cargo.toml
projects/rust-game-1/rustgame1/: Cargo.toml  README.md
projects/rust-game-1/rustgame1/metaverse_seed/: Cargo.toml
projects/rust-game-1/rustgame1/metaverse_seed/assets/: metaverse_seed.desktop
templates/lightsaber-template/: Cargo.toml
templates/lightsaber-template/src/: main.rs
templates/rust-project-template/: README.md
templates/rust-project-template/src/: main.rs
