[package]
name = "rust-lightsaber-template"
version = "0.1.0"
edition = "2021"

# Core lightsaber dependencies (from No Boilerplate guide)
[dependencies]
# Error handling - choose one
color-eyre = "0.6"      # Rich, colorful error reports
# anyhow = "1.0"        # Alternative: simpler error handling

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (if needed)
tokio = { version = "1", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client (if needed)
reqwest = { version = "0.11", features = ["json"] }

# Parallel computing
rayon = "1.5"

# CLI parsing (if building a CLI tool)
clap = { version = "4", features = ["derive"] }

# Date/time handling
chrono = "0.4"

# Database (uncomment if needed)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# GUI (uncomment if needed)
# egui = "0.24"
# yew = "0.21"

[dev-dependencies]
# Test runners and utilities can go here
