[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
tera = "1.19"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
