[package]
name = "package-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pkgmgr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
petgraph = "0.6"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
lto = true
